--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 scikit-learn==1.6.1
 xgboost==2.0.3
 streamlit==1.35.0
-pandas>=2.2.2 --pre
+pandas==2.2.2
 numpy==1.26.4
 joblib==1.4.2
+blinker==1.9.0
+
